fix transition ease dark mode

--- a/assets/scss/darkmode/_darkmode.scss
+++ b/assets/scss/darkmode/_darkmode.scss
@@ -1,30 +1,39 @@
 
+
+html {
+background-color: $darkbrown;
+}
+
+
 .darkmode {
-    header {
-        display: flex;
-        flex-direction: row;
-        flex-wrap: nowrap;
-        justify-content: space-between;
-        align-items: center;
+    height: 100%;
+
+    header,
+    main {
+        background-color: $darkbrown;
+
 
     }
 
     // LOGO--------------------------
     .logo {
-        color: $vintagedarkRed;
-        width: 5%;
-        height: 5%;
-        margin: 20px;
+        color: $Lattecream;
+        background-color: $darkbrown;
+        border: 2px solid $Lattecream;
+        // border-radius: 10px;
+        box-shadow: 5px 5px 0px $Lattecream;
+        // transition: all 0.3s ease;
+
     }
 
     // TITRE <H1>--------------------------
     h1 {
-        color: $darkbeige;
-        background-color: $brown;
-        padding: 10px 20px;
-        font-weight: bold;
-        border: 5px solid $darkbrown;
+        color: $Lattecream;
+        background-color: $darkbrown;
+        border: 2px solid $Lattecream;
         // border-radius: 10px;
+        box-shadow: 5px 5px 0px $Lattecream;
+        // transition: all 0.3s ease;
     }
 
     //ADD EVENT BOUTON ------------------------
@@ -34,23 +43,23 @@
 
         margin: 20px;
         color: $Lattecream;
-        background-color: $brown;
-        border: 2px solid $darkbrown;
+        background-color: $darkbrown;
+        border: 2px solid $Lattecream;
         // border-radius: 10px;
-        box-shadow: 5px 5px 0px $darkbrown;
+        box-shadow: 5px 5px 0px $Lattecream;
         transition: all 0.3s ease;
         cursor: pointer;
     }
 
     button:hover {
-        background-color: $Lattecream;
-        color: $brown;
-        border: 2px solid $brown;
-        box-shadow: 5px 5px 0px $brown;
+        background-color: $brown;
+        color: $Lattecream;
+        border: 2px solid $Lattecream;
+        box-shadow: 5px 5px 0px $Lattecream;
     }
 
     button:active {
-        background-color: $Lattecream;
+        background-color: $brown;
         box-shadow: none;
         transform: translateY(4px);
     }
@@ -59,14 +68,21 @@
     .events {
         display: flex;
         flex-wrap: wrap;
+
         // border: 2px solid $brown;
+        &__title {
+            background-color: $brown;
+            color: $beige;
+        }
 
         &__description {
-            color: $brown;
+            background-color: $brown;
+            color: $beige;
         }
 
         &__author {
-            color: $darkbrown;
+            background-color: $brown;
+            color: $beige;
         }
     }
 
@@ -76,42 +92,48 @@
     }
 
     .eventBox {
-        width: 500px;
-        border: 1px solid $brown;
-        box-shadow: 5px 5px 0px $brown;
-        transition: all 0.3s ease;
+        background-color: $brown;
+        border: 1px solid $Lattecream;
+        box-shadow: 5px 5px 0px $Lattecream;
+        // transition: all 0.3s ease;
         margin: 10px;
         padding: 10px;
     }
 
     //   TABLEAU--------------------------------
     table {
-        // width: 100%;
+        background-color: $brown;
         margin: 10px;
         padding: 10px;
         border-collapse: collapse;
-        border: 1px solid $brown;
-        box-shadow: 5px 5px 0px $brown;
-        transition: all 0.3s ease;
+        border: 1px solid $Lattecream;
+        box-shadow: 5px 5px 0px $Lattecream;
+        // transition: all 0.3s ease;
     }
 
     td,
     th {
-        color: $brown;
-        border: 1px solid $brown;
+        background-color: $brown;
+        color: $Lattecream;
+        border: 1px solid $Lattecream;
         padding: 5px;
     }
 
+    // FORM-----------------------
+    form {
+        background-color: $brown;
+        color: $beige;
+    }
 
     //   NAMEINPUT--------------------------------
     .nameInput {
-        
-    margin: 10px;
+
+        margin: 10px;
         width: 150px;
         height: 20px;
-        border: 2px solid $brown;
-        background-color: white;
-        box-shadow: 4px 4px $brown;
+        border: 2px solid $darkbrown;
+        background-color: $beige;
+        box-shadow: 4px 4px $darkbrown;
         font-size: 15px;
         font-weight: 600;
         color: $darkcoffee;
@@ -128,6 +150,15 @@
         }
     }
 
+    .checkboxes {
+        background-color: $brown;
+    }
+
+    label {
+        background-color: $brown;
+        color: $beige;
+    }
+
 
     .checkbox {
         margin: 5px;
@@ -137,4 +168,67 @@
         border: 1px solid $brown;
         box-shadow: 2px 2px 0px $brown;
     }
+
+    footer {
+        background-color: $brown;
+        color: $beige;
+    }
+
+    //MODAL BOX-----------------------
+    .boite {
+
+
+        &__contenu {
+           
+            color: $brown;
+            background-color: $brown;
+            box-shadow: 5px 5px 0px $brown;
+
+
+            &__close {
+                color: $coffee;
+                color: $brown;
+                background-color: $brown;
+                border: 2px solid $brown;
+                // border-radius: 10px;
+                box-shadow: 5px 5px 0px $brown;
+                // transition: all 0.3s ease;
+
+                &__form {
+                    &__modalInput {
+                        border: 2px solid $brown;
+                        background-color: white;
+                        box-shadow: 4px 4px $brown;
+                        color: $brown;
+
+                        .input::placeholder {
+                            color: $darkcoffee;
+                        }
+
+                        .input:focus {
+                            border: 2px solid $darkbrown;
+                        }
+                    }
+
+                }
+
+                &__close {
+                    color: $darkbrown;
+
+                    &:focus,
+                    &:hover {
+                        color: $darkbrown;
+
+                    }
+                }
+            }
+        }
+    }
+
+    li {
+        list-style: none;
+}
+//  footer {
+//     background-color: $darkbrown;
+//  }   
 }
